# path_extraction

./: CMakeLists.txt  package.xml
config/: path_extraction_and_following.yaml
launch/: run_PathExtraction.launch  run_movebase_follwer.launch
path/: FMTC_official_L.txt  FMTC_official_R.txt  FMTC_test_01.txt  FMTC_test_02.txt  FMTC_test_03.txt  FMTC_test_04.txt  FMTC_test_05.txt  FMTC_test_09.txt  FMTC_test_100.txt  field_test_01.txt  field_test_02.txt  turtlebot2.txt
rviz/: pathextraction.rviz  pathextraction_map.rviz  pathfollowing.rviz
scripts/: movebase_follower.py  path_extraction.py  track_tracker.py
scripts/lib/: utils.py
